# policyengine-spm-decomposition

./: .gitignore
analysis/: compute_breakdowns.py  compute_program_effects.py  extract_state_data.py  pyproject.toml  run_pipeline.py
analysis/src/spm_decomposition/: __init__.py  __main__.py  config.py  decomposition.py  demographics.py  poverty.py  programs.py  states.py  tax_gap.py  weights.py
analysis/tests/: conftest.py  test_decomposition.py  test_poverty.py  test_tax_gap.py  test_weights.py
app/: index.html  package.json  vite.config.ts  vitest.setup.ts
app/public/: decomposition.json
app/src/: App.tsx  main.tsx  theme.ts
app/src/__tests__/: HeroSection.test.tsx  MethodologySection.test.tsx  StatePovertyChart.test.tsx  SummaryTable.test.tsx  TaxGapChart.test.tsx  WaterfallChart.test.tsx  WeightRebalancingChart.test.tsx  renderWithProviders.tsx  testData.ts  useDecompositionData.test.ts
app/src/components/: DemographicChart.tsx  HeroSection.tsx  MethodologySection.tsx  ProgramEffectsChart.tsx  StatePovertyChart.tsx  SummaryTable.tsx  TaxGapChart.tsx  WaterfallChart.tsx  WeightRebalancingChart.tsx
app/src/hooks/: useDecompositionData.ts
app/src/types/: decomposition.ts
app/src/utils/: chartConfig.ts  formatters.ts
