[project]
name = "spm-decomposition"
version = "0.1.0"
description = "Decompose PolicyEngine vs Census SPM child poverty rate divergence"
requires-python = ">=3.10"
dependencies = [
    "policyengine-us>=1.0.0",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that run actual microsimulations (deselect with '-m \"not slow\"')",
]
